...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/main_email"
        android:hint="@string/email_ask"
        android:textAlignment="center"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/networkStatus"
        android:layout_centerHorizontal="true" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/main_email"
        android:layout_alignEnd="@+id/main_email"
        android:id="@+id/main_password"
        android:hint="@string/password_ask"
        android:textAlignment="center"
        android:nextFocusDown="@+id/connectionButton"
        android:background="@android:drawable/editbox_background" />

    <Button
...
